--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -18,6 +18,9 @@ header h1 a:hover {
 }
 #logo {
   padding: 10px;
+  text-decoration: none;
+  color: #fff
+  
 }
 nav li a:hover {
   color: #7e8aa2;
