--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -19,8 +19,10 @@ header h1 a:hover {
 #logo {
   padding: 10px;
   text-decoration: none;
-  color: #fff
-  
+  color: #fff;
+}
+a {
+  color: #fff;
 }
 nav li a:hover {
   color: #7e8aa2;
